spark/test/corpus/select_extensions.txt
================================================================================
Spark: QUALIFY clause
================================================================================

SELECT id, row_number() OVER (PARTITION BY dept ORDER BY salary) AS rn
FROM employees
QUALIFY rn = 1;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))
        (term
          value: (window_function
            (invocation
              (object_reference
                name: (identifier)))
            (keyword_over)
            (window_specification
              (partition_by
                (keyword_partition)
                (keyword_by)
                (field
                  name: (identifier)))
              (order_by
                (keyword_order)
                (keyword_by)
                (order_target
                  (field
                    name: (identifier))))))
          (keyword_as)
          alias: (identifier))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (qualify
        (keyword_qualify)
        predicate: (binary_expression
          left: (field
            name: (identifier))
          right: (literal))))))

================================================================================
Spark: CLUSTER BY clause
================================================================================

SELECT id, dept FROM employees CLUSTER BY dept;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (cluster_by
        (keyword_cluster)
        (keyword_by)
        (field
          name: (identifier))))))

================================================================================
Spark: DISTRIBUTE BY clause
================================================================================

SELECT id FROM t DISTRIBUTE BY id;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (distribute_by
        (keyword_distribute)
        (keyword_by)
        (field
          name: (identifier))))))

================================================================================
Spark: SORT BY clause
================================================================================

SELECT id FROM t SORT BY id DESC;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (sort_by
        (keyword_sort)
        (keyword_by)
        (order_target
          (field
            name: (identifier))
          (direction
            (keyword_desc)))))))

================================================================================
Spark: PIVOT clause on relation
================================================================================

SELECT * FROM sales PIVOT (sum(amount) FOR quarter IN ('Q1', 'Q2', 'Q3', 'Q4'));

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        (pivot_clause
          (keyword_pivot)
          (invocation
            (object_reference
              name: (identifier))
            parameter: (term
              value: (field
                name: (identifier))))
          (keyword_for)
          (identifier)
          (keyword_in)
          (literal)
          (literal)
          (literal)
          (literal))))))

================================================================================
Spark: UNPIVOT clause on relation
================================================================================

SELECT * FROM t UNPIVOT (value FOR col IN (a, b, c));

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        (unpivot_clause
          (keyword_unpivot)
          value_column: (identifier)
          (keyword_for)
          name_column: (identifier)
          (keyword_in)
          (identifier)
          (identifier)
          (identifier))))))

================================================================================
Spark: CREATE TABLE USING delta
================================================================================

CREATE TABLE my_table (id INT, name STRING) USING delta;

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (int
            (keyword_int)))
        (column_definition
          name: (identifier)
          type: (keyword_string)))
      (table_using
        (keyword_using)
        format: (object_reference
          name: (identifier))))))

================================================================================
Spark: CREATE TABLE USING parquet OPTIONS
================================================================================

CREATE TABLE logs (ts TIMESTAMP, msg STRING) USING parquet OPTIONS (path = '/mnt/logs');

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (timestamp
            (keyword_timestamp)))
        (column_definition
          name: (identifier)
          type: (keyword_string)))
      (table_using
        (keyword_using)
        format: (object_reference
          name: (identifier)))
      (table_options
        (keyword_options)
        (table_option
          name: (identifier))))))

================================================================================
Spark: CREATE TABLE USING COMMENT
================================================================================

CREATE TABLE t (id INT) USING delta COMMENT 'my table';

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (int
            (keyword_int))))
      (table_using
        (keyword_using)
        format: (object_reference
          name: (identifier)))
      (keyword_comment)
      (literal))))
